--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,10 @@ services:
       - MYSQL_DATABASE=parc
       - MYSQL_USER=mysqlusr
       - MYSQL_PASSWORD=mysqlpwd
+  adminer:
+    image: adminer
+    environment:
+      ADMINER_DEFAULT_SERVER: database
+    restart: always
+    ports:
+      - 8001:8080
