Données gardées dans un volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     image: mariadb:latest
     volumes:
       - /python:/var/www/html/api
+      - ./mysql_data:/var/lib/mysql
     ports:
       - 3306:3306
     environment:
